subdir('AzCore')
subdir('AzTest')
# This is needed to work around the circular dependency
# between AzCore and AzTest
# subdir('AzCore/Tests')
subdir('GridMate')
subdir('AzFramework')
subdir('AtomCore')
subdir('AzGameFramework')
subdir('AzNetworking')
#subdir('AzQtComponents')
subdir('AzToolsFramework')
