azcore_files += files(
'Platform.cpp',
'AzCoreModule.cpp',
'Asset/AssetCommon.cpp',
'Asset/AssetContainer.cpp',
'Asset/AssetDataStream.cpp',
'Asset/AssetJsonSerializer.cpp',
'Asset/AssetManager.cpp',
'Asset/AssetManagerComponent.cpp',
'Asset/AssetSerializer.cpp',
'Component/Component.cpp',
'Component/ComponentApplication.cpp',
'Component/ComponentBus.cpp',
'Component/Entity.cpp',
'Component/EntityIdSerializer.cpp',
'Component/EntitySerializer.cpp',
'Component/EntityUtils.cpp',
'Component/NamedEntityId.cpp',
'Component/NonUniformScaleBus.cpp',
'Console/Console.cpp',
'Console/ConsoleFunctor.cpp',
'Console/LoggerSystemComponent.cpp',
'Slice/SliceAsset.cpp',
'Slice/SliceAssetHandler.cpp',
'Slice/SliceComponent.cpp',
'Slice/SliceSystemComponent.cpp',
'Slice/SliceMetadataInfoComponent.cpp',
'Compression/compression.cpp',
'Compression/zstd_compression.cpp',
'Debug/AssetTracking.cpp',
'Debug/LocalFileEventLogger.cpp',
'Debug/FrameProfilerComponent.cpp',
'Debug/ProfileModuleInit.cpp',
'Debug/Profiler.cpp',
'Debug/ProfilerDriller.cpp',
'Debug/EventTrace.cpp',
'Debug/EventTraceDriller.cpp',
'Debug/Trace.cpp',
'Debug/TraceMessagesDriller.cpp',
'Debug/TraceReflection.cpp',
'Driller/Driller.cpp',
'Driller/DrillerBus.cpp',
'Driller/Stream.cpp',
'EBus/EBusEnvironment.cpp',
'EBus/EventSchedulerSystemComponent.cpp',
'EBus/ScheduledEvent.cpp',
'EBus/ScheduledEventHandle.cpp',
'IO/CompressionBus.cpp',
'IO/Compressor.cpp',
'IO/CompressorStream.cpp',
'IO/CompressorZLib.cpp',
'IO/CompressorZStd.cpp',
'IO/FileIO.cpp',
'IO/IOUtils.cpp',
'IO/IStreamerTypes.cpp',
'IO/GenericStreams.cpp',
'IO/Path/Path.cpp',
'IO/SystemFile.cpp',
'IO/Streamer/BlockCache.cpp',
'IO/Streamer/DedicatedCache.cpp',
'IO/Streamer/FileRange.cpp',
'IO/Streamer/FileRequest.cpp',
'IO/Streamer/FullFileDecompressor.cpp',
'IO/Streamer/ReadSplitter.cpp',
'IO/Streamer/RequestPath.cpp',
'IO/Streamer/Scheduler.cpp',
'IO/Streamer/Statistics.cpp',
'IO/Streamer/StorageDrive.cpp',
'IO/Streamer/StreamerConfiguration.cpp',
'IO/Streamer/Streamer.cpp',
'IO/Streamer/StreamerContext.cpp',
'IO/Streamer/StreamerComponent.cpp',
'IO/Streamer/StreamStackEntry.cpp',
'IPC/SharedMemory.cpp',
'Jobs/Internal/JobManagerBase.cpp',
'Jobs/Internal/JobManagerWorkStealing.cpp',
'Jobs/JobContext.cpp',
'Jobs/JobManager.cpp',
'Jobs/JobManagerComponent.cpp',
'Math/Aabb.cpp',
'Math/Color.cpp',
'Math/ColorSerializer.cpp',
'Math/Crc.cpp',
'Math/Frustum.cpp',
'Math/Geometry2DUtils.cpp',
'Math/IntersectSegment.cpp',
'Math/MathReflection.cpp',
'Math/MathScriptHelpers.cpp',
'Math/MathUtils.cpp',
'Math/MathMatrixSerializer.cpp',
'Math/MathVectorSerializer.cpp',
'Math/Matrix3x3.cpp',
'Math/Matrix3x4.cpp',
'Math/Matrix4x4.cpp',
'Math/MatrixUtils.cpp',
'Math/Obb.cpp',
'Math/Plane.cpp',
'Math/PolygonPrism.cpp',
'Math/Quaternion.cpp',
'Math/Sfmt.cpp',
'Math/Spline.cpp',
'Math/Transform.cpp',
'Math/TransformSerializer.cpp',
'Math/Uuid.cpp',
'Math/UuidSerializer.cpp',
'Math/Vector2.cpp',
'Math/Vector3.cpp',
'Math/Vector4.cpp',
'Math/VertexContainer.cpp',
'Math/Color.cpp',
'Math/ToString.cpp',
'Memory/AllocationRecords.cpp',
'Memory/AllocatorBase.cpp',
'Memory/AllocatorManager.cpp',
'Memory/AllocatorOverrideShim.cpp',
'Memory/BestFitExternalMapAllocator.cpp',
'Memory/BestFitExternalMapSchema.cpp',
'Memory/HphaSchema.cpp',
'Memory/IAllocator.cpp',
'Memory/MallocSchema.cpp',
'Memory/Memory.cpp',
'Memory/MemoryComponent.cpp',
'Memory/MemoryDriller.cpp',
'Memory/OSAllocator.cpp',
'Memory/OverrunDetectionAllocator.cpp',
'Memory/PoolSchema.cpp',
'Memory/SystemAllocator.cpp',
'Module/DynamicModuleHandle.cpp',
'Module/Environment.cpp',
'Module/Module.cpp',
'Module/ModuleManager.cpp',
'Module/Internal/ModuleManagerSearchPathTool.cpp',
'NativeUI/NativeUISystemComponent.cpp',
'Name/Name.cpp',
'Name/NameDictionary.cpp',
'Name/NameJsonSerializer.cpp',
'Name/NameSerializer.cpp',
'Name/Internal/NameData.cpp',
'RTTI/ReflectContext.cpp',
'RTTI/ReflectionManager.cpp',
'RTTI/BehaviorContext.cpp',
'RTTI/BehaviorContextUtilities.cpp',
'Script/ScriptAsset.cpp',
'Script/ScriptContext.cpp',
'Script/ScriptContextDebug.cpp',
'Script/ScriptSystemComponent.cpp',
'Script/ScriptTimePoint.cpp',
'Script/ScriptProperty.cpp',
'Script/ScriptPropertyTable.cpp',
'Script/ScriptDebug.cpp',
'ScriptCanvas/ScriptCanvasOnDemandNames.cpp',
'Serialization/DataOverlayProviderMsgs.cpp',
'Serialization/DynamicSerializableField.cpp',
'Serialization/EditContext.cpp',
'Serialization/SerializationUtils.cpp',
'Serialization/ObjectStream.cpp',
'Serialization/SerializeContext.cpp',
'Serialization/SerializeContextEnum.cpp',
'Serialization/DataPatch.cpp',
'Serialization/DataPatchUpgradeManager.cpp',
'Serialization/Json/ArraySerializer.cpp',
'Serialization/Json/BaseJsonSerializer.cpp',
'Serialization/Json/BasicContainerSerializer.cpp',
'Serialization/Json/BoolSerializer.cpp',
'Serialization/Json/ByteStreamSerializer.cpp',
'Serialization/Json/DoubleSerializer.cpp',
'Serialization/Json/IntSerializer.cpp',
'Serialization/Json/JsonDeserializer.cpp',
'Serialization/Json/JsonMerger.cpp',
'Serialization/Json/JsonSerialization.cpp',
'Serialization/Json/JsonSerializationResult.cpp',
'Serialization/Json/JsonSerializer.cpp',
'Serialization/Json/JsonSystemComponent.cpp',
'Serialization/Json/MapSerializer.cpp',
'Serialization/Json/RegistrationContext.cpp',
'Serialization/Json/SmartPointerSerializer.cpp',
'Serialization/Json/StackedString.cpp',
'Serialization/Json/StringSerializer.cpp',
'Serialization/Json/TupleSerializer.cpp',
'Serialization/Json/UnorderedSetSerializer.cpp',
'Serialization/Json/UnsupportedTypesSerializer.cpp',
'Settings/CommandLine.cpp',
'Settings/SettingsRegistry.cpp',
'Settings/SettingsRegistryConsoleUtils.cpp',
'Settings/SettingsRegistryImpl.cpp',
'Settings/SettingsRegistryMergeUtils.cpp',
'Settings/SettingsRegistryScriptUtils.cpp',
'State/HSM.cpp',
'Statistics/RunningStatistic.cpp',
'Statistics/StatisticalProfilerProxySystemComponent.cpp',
'Statistics/TimeDataStatisticsManager.cpp',
'StringFunc/StringFunc.cpp',
'UserSettings/UserSettings.cpp',
'UserSettings/UserSettingsComponent.cpp',
'UserSettings/UserSettingsProvider.cpp',
'Utils/TypeHash.cpp',
'Utils/Utils.cpp',
'Memory/HeapSchema.cpp',
'PlatformId/PlatformDefaults.cpp',
'PlatformId/PlatformId.cpp',
'Socket/AzSocket.cpp',
'Time/TimeSystemComponent.cpp',
'Memory/HeapSchema.cpp',
)

subdir('std')
