azframework_files += files(
'Asset/AssetSystemComponentHelper.cpp',
'AzFrameworkModule.cpp',
'Application/Application.cpp',
'Archive/Archive.cpp',
'Archive/ArchiveFileIO.cpp',
'Archive/ArchiveFindData.cpp',
'Archive/MissingFileReport.cpp',
'Archive/NestedArchive.cpp',
'Archive/ZipDirCache.cpp',
'Archive/ZipDirCacheFactory.cpp',
'Archive/ZipDirFind.cpp',
'Archive/ZipDirList.cpp',
'Archive/ZipDirStructures.cpp',
'Archive/ZipDirTree.cpp',
'Asset/SimpleAsset.cpp',
'Asset/AssetCatalog.cpp',
'Asset/AssetCatalogComponent.cpp',
'Asset/AssetProcessorMessages.cpp',
'Asset/AssetRegistry.cpp',
'Asset/AssetSeedList.cpp',
'Asset/AssetSystemComponent.cpp',
'Asset/AssetBundleManifest.cpp',
'Asset/CustomAssetTypeComponent.cpp',
'Asset/FileTagAsset.cpp',
'Asset/XmlSchemaAsset.cpp',
'Asset/Benchmark/BenchmarkAsset.cpp',
'Asset/Benchmark/BenchmarkCommands.cpp',
'Asset/Benchmark/BenchmarkSettingsAsset.cpp',
'Viewport/ViewportBus.cpp',
'Viewport/ViewportColors.cpp',
'Viewport/ViewportConstants.cpp',
'Viewport/SingleViewportController.cpp',
'Viewport/ViewportControllerList.cpp',
'Viewport/ViewportScreen.cpp',
'Viewport/ScreenGeometry.cpp',
'Viewport/CameraState.cpp',
'Viewport/CameraInput.cpp',
'Viewport/ClickDetector.cpp',
'Entity/BehaviorEntity.cpp',
'Entity/GameEntityContextComponent.cpp',
'Entity/EntityContext.cpp',
'Entity/SliceEntityOwnershipService.cpp',
'Entity/SliceGameEntityOwnershipService.cpp',
'Entity/PrefabEntityOwnershipService.cpp',
'Driller/RemoteDrillerInterface.cpp',
'Driller/DrillToFileComponent.cpp',
'Components/TransformComponent.cpp',
'Components/ConsoleBus.cpp',
'Components/AzFrameworkConfigurationSystemComponent.cpp',
'Components/NonUniformScaleComponent.cpp',
'FileFunc/FileFunc.cpp',
'Gem/GemInfo.cpp',
'IO/LocalFileIO.cpp',
'IO/FileOperations.cpp',
'IO/RemoteFileIO.cpp',
'IO/RemoteStorageDrive.cpp',
'Network/AssetProcessorConnection.cpp',
'Network/SocketConnection.cpp',
'Logging/LogFile.cpp',
'Logging/LoggingComponent.cpp',
'Logging/StartupLogSinkReporter.cpp',
'Logging/MissingAssetLogger.cpp',
'Scene/Scene.cpp',
'Scene/SceneSystemComponent.cpp',
'Script/ScriptComponent.cpp',
'Script/ScriptDebugMsgReflection.cpp',
'Script/ScriptRemoteDebugging.cpp',
'Session/ISessionRequests.cpp',
'Session/SessionConfig.cpp',
'StreamingInstall/StreamingInstall.cpp',
'Physics/Collision/CollisionEvents.cpp',
'Physics/Collision/CollisionLayers.cpp',
'Physics/Collision/CollisionGroups.cpp',
'Physics/Common/PhysicsJoint.cpp',
'Physics/Common/PhysicsSceneQueries.cpp',
'Physics/Common/PhysicsSimulatedBody.cpp',
'Physics/Common/PhysicsSimulatedBodyAutomation.cpp',
'Physics/Common/PhysicsSimulatedBodyEvents.cpp',
'Physics/Configuration/JointConfiguration.cpp',
'Physics/Configuration/CollisionConfiguration.cpp',
'Physics/Configuration/RigidBodyConfiguration.cpp',
'Physics/Configuration/StaticRigidBodyConfiguration.cpp',
'Physics/Configuration/SceneConfiguration.cpp',
'Physics/Configuration/SimulatedBodyConfiguration.cpp',
'Physics/Configuration/SystemConfiguration.cpp',
'Physics/SimulatedBodies/RigidBody.cpp',
'Physics/SimulatedBodies/StaticRigidBody.cpp',
'Physics/PhysicsSystem.cpp',
'Physics/PhysicsScene.cpp',
'Physics/AnimationConfiguration.cpp',
'Physics/Character.cpp',
'Physics/CollisionBus.cpp',
'Physics/Material.cpp',
'Physics/NameConstants.cpp',
'Physics/Shape.cpp',
'Physics/ShapeConfiguration.cpp',
'Physics/Ragdoll.cpp',
'Physics/Utils.cpp',
'Physics/ClassConverters.cpp',
'Process/ProcessCommunicator.cpp',
'Process/ProcessWatcher.cpp',
'Process/ProcessWatcher.cpp',
'ProjectManager/ProjectManager.cpp',
'Render/GameIntersectorComponent.cpp',
'Render/Intersector.cpp',
'Spawnable/Spawnable.cpp',
'Spawnable/SpawnableAssetHandler.cpp',
'Spawnable/SpawnableEntitiesContainer.cpp',
'Spawnable/SpawnableEntitiesInterface.cpp',
'Spawnable/SpawnableEntitiesManager.cpp',
'Spawnable/SpawnableMetaData.cpp',
'Spawnable/SpawnableMonitor.cpp',
'Spawnable/SpawnableSystemComponent.cpp',
'Terrain/TerrainDataRequestBus.cpp',
'Windowing/NativeWindow.cpp',
'Input/Channels/InputChannel.cpp',
'Input/Channels/InputChannelAnalog.cpp',
'Input/Channels/InputChannelAnalogWithPosition2D.cpp',
'Input/Channels/InputChannelAxis1D.cpp',
'Input/Channels/InputChannelAxis2D.cpp',
'Input/Channels/InputChannelAxis3D.cpp',
'Input/Channels/InputChannelDelta.cpp',
'Input/Channels/InputChannelDeltaWithSharedPosition2D.cpp',
'Input/Channels/InputChannelDigital.cpp',
'Input/Channels/InputChannelDigitalWithPosition2D.cpp',
'Input/Channels/InputChannelDigitalWithSharedModifierKeyStates.cpp',
'Input/Channels/InputChannelDigitalWithSharedPosition2D.cpp',
'Input/Channels/InputChannelId.cpp',
'Input/Channels/InputChannelQuaternion.cpp',
'Input/Contexts/InputContext.cpp',
'Input/Devices/InputDevice.cpp',
'Input/Devices/InputDeviceId.cpp',
'Input/Devices/Gamepad/InputDeviceGamepad.cpp',
'Input/Devices/Keyboard/InputDeviceKeyboard.cpp',
'Input/Devices/Motion/InputDeviceMotion.cpp',
'Input/Devices/Mouse/InputDeviceMouse.cpp',
'Input/Devices/VirtualKeyboard/InputDeviceVirtualKeyboard.cpp',
'Input/Devices/Touch/InputDeviceTouch.cpp',
'Input/Events/InputChannelEventFilter.cpp',
'Input/Events/InputChannelEventListener.cpp',
'Input/Events/InputChannelEventSink.cpp',
'Input/Events/InputTextEventListener.cpp',
'Input/Mappings/InputMapping.cpp',
'Input/Mappings/InputMappingAnd.cpp',
'Input/Mappings/InputMappingOr.cpp',
'Input/System/InputSystemComponent.cpp',
'TargetManagement/NeighborhoodAPI.cpp',
'TargetManagement/TargetManagementComponent.cpp',
'FileTag/FileTag.cpp',
'FileTag/FileTagComponent.cpp',
'UnitTest/TestDebugDisplayRequests.cpp',
'Slice/SliceInstantiationTicket.cpp',
'Visibility/OctreeSystemComponent.cpp',
'Visibility/BoundsBus.cpp',
'Visibility/VisibilityDebug.cpp',
'Visibility/EntityVisibilityBoundsUnionSystem.cpp',
'Visibility/EntityVisibilityQuery.cpp',
)
