aznetworking_files += files(
'AzNetworkingModule.cpp',
'ConnectionLayer/ConnectionMetrics.cpp',
'DataStructures/TimeoutQueue.cpp',
'Framework/NetworkingSystemComponent.cpp',
'Serialization/DeltaSerializer.cpp',
'Serialization/HashSerializer.cpp',
'Serialization/NetworkInputSerializer.cpp',
'Serialization/NetworkOutputSerializer.cpp',
'Serialization/StringifySerializer.cpp',
#'TcpTransport/TcpConnection.cpp',
'TcpTransport/TcpConnectionSet.cpp',
'TcpTransport/TcpPacketHeader.cpp',
'TcpTransport/TcpRingBufferImpl.cpp',
'TcpTransport/TcpSocket.cpp',
'TcpTransport/TcpSocketManager_Epoll.cpp',
'TcpTransport/TcpSocketManager_None.cpp',
'TcpTransport/TcpSocketManager_Select.cpp',
'TcpTransport/TlsSocket.cpp',
'TcpTransport/TcpListenThread.cpp',
#'TcpTransport/TcpNetworkInterface.cpp',
#'UdpTransport/DtlsEndpoint.cpp',
'UdpTransport/DtlsSocket.cpp',
#'UdpTransport/UdpConnection.cpp',
#'UdpTransport/UdpConnectionSet.cpp',
#'UdpTransport/UdpFragmentQueue.cpp',
#'UdpTransport/UdpNetworkInterface.cpp',
'UdpTransport/UdpPacketHeader.cpp',
#'UdpTransport/UdpPacketIdWindow.cpp',
'UdpTransport/UdpPacketTracker.cpp',
'UdpTransport/UdpReaderThread.cpp',
#'UdpTransport/UdpReliableQueue.cpp',
'UdpTransport/UdpSocket.cpp',
'Utilities/CidrAddress.cpp',
'Utilities/EncryptionCommon.cpp',
'Utilities/IpAddress.cpp',
'Utilities/NetworkCommon.cpp',
'Utilities/TimedThread.cpp',
)
