azqtcomponents_files += files(
'Components/AutoCustomWindowDecorations.cpp',
'Components/ButtonDivider.cpp',
'Components/ButtonStripe.cpp',
'Components/ConfigHelpers.cpp',
'Components/DockBar.cpp',
'Components/DockBarButton.cpp',
'Components/DockMainWindow.cpp',
'Components/DockTabBar.cpp',
'Components/DockTabWidget.cpp',
'Components/FancyDocking.cpp',
'Components/FancyDockingGhostWidget.cpp',
'Components/FancyDockingDropZoneWidget.cpp',
'Components/FilteredSearchWidget.cpp',
'Components/GlobalEventFilter.cpp',
'Components/Titlebar.cpp',
'Components/TitleBarOverdrawHandler.cpp',
'Components/ToolButtonComboBox.cpp',
'Components/ToolButtonLineEdit.cpp',
'Components/ToolButtonWithWidget.cpp',
'Components/StyledDockWidget.cpp',
'Components/StyledBusyLabel.cpp',
'Components/StyledDetailsTableModel.cpp',
'Components/StyledDetailsTableView.cpp',
'Components/HelpButton.cpp',
'Components/InteractiveWindowGeometryChanger.cpp',
'Components/SearchLineEdit.cpp',
'Components/StyledDialog.cpp',
'Components/StyledLineEdit.cpp',
'Components/StyledSpinBox.cpp',
'Components/Style.cpp',
'Components/StyleManager.cpp',
'Components/StyleSheetCache.cpp',
'Components/StylesheetPreprocessor.cpp',
'Components/TagSelector.cpp',
'Components/ToolBarArea.cpp',
'Components/VectorEdit.cpp',
'Components/WindowDecorationWrapper.cpp',
'Components/ExtendedLabel.cpp',
'Components/FlowLayout.cpp',
'Components/Widgets/AssetFolderListView.cpp',
'Components/Widgets/AssetFolderThumbnailView.cpp',
'Components/Widgets/BreadCrumbs.cpp',
'Components/Widgets/BrowseEdit.cpp',
'Components/Widgets/Card.cpp',
'Components/Widgets/CardHeader.cpp',
'Components/Widgets/CardNotification.cpp',
'Components/Widgets/CheckBox.cpp',
'Components/Widgets/ColorLabel.cpp',
'Components/Widgets/ColorPicker.cpp',
'Components/Widgets/ComboBox.cpp',
'Components/Widgets/DialogButtonBox.cpp',
'Components/Widgets/DragAndDrop.cpp',
'Components/Widgets/ElidingLabel.cpp',
'Components/Widgets/Eyedropper.cpp',
'Components/Widgets/GradientSlider.cpp',
'Components/Widgets/LineEdit.cpp',
'Components/Widgets/LogicalTabOrderingWidget.cpp',
'Components/Widgets/Menu.cpp',
'Components/Widgets/MessageBox.cpp',
'Components/Widgets/OverlayWidget.cpp',
'Components/Widgets/Internal/OverlayWidgetLayer.cpp',
'Components/Widgets/ProgressBar.cpp',
'Components/Widgets/PushButton.cpp',
'Components/Widgets/RadioButton.cpp',
'Components/Widgets/ScrollBar.cpp',
'Components/Widgets/SegmentBar.cpp',
'Components/Widgets/SegmentControl.cpp',
'Components/Widgets/Slider.cpp',
'Components/Widgets/SliderCombo.cpp',
'Components/Widgets/SpinBox.cpp',
'Components/Widgets/StatusBar.cpp',
'Components/Widgets/TableView.cpp',
'Components/Widgets/TabWidget.cpp',
'Components/Widgets/TabWidgetActionToolBar.cpp',
'Components/Widgets/Text.cpp',
'Components/Widgets/ToolBar.cpp',
'Components/Widgets/ToolButton.cpp',
'Components/Widgets/TreeView.cpp',
'Components/Widgets/VectorInput.cpp',
'Components/Widgets/ColorPicker/ColorController.cpp',
'Components/Widgets/ColorPicker/ColorComponentSliders.cpp',
'Components/Widgets/ColorPicker/ColorPreview.cpp',
'Components/Widgets/ColorPicker/ColorRGBAEdit.cpp',
'Components/Widgets/ColorPicker/ColorHexEdit.cpp',
'Components/Widgets/ColorPicker/ColorGrid.cpp',
'Components/Widgets/ColorPicker/ColorValidator.cpp',
'Components/Widgets/ColorPicker/PaletteView.cpp',
'Components/Widgets/ColorPicker/Palette.cpp',
'Components/Widgets/ColorPicker/GammaEdit.cpp',
'Components/Widgets/ColorPicker/PaletteCard.cpp',
'Components/Widgets/ColorPicker/PaletteCardCollection.cpp',
'Components/Widgets/ColorPicker/Swatch.cpp',
'Components/Widgets/ColorPicker/ColorWarning.cpp',
'Utilities/ColorUtilities.cpp',
'Utilities/Conversions.cpp',
'Utilities/DesktopUtilities.cpp',
'Utilities/HandleDpiAwareness.cpp',
'Utilities/QtPluginPaths.cpp',
'Utilities/QtWindowUtilities.cpp',
'Utilities/QtViewPaneEffects.cpp',
'Utilities/RandomNumberGenerator.cpp',
'Utilities/ScreenUtilities.cpp',
'Utilities/SelectionProxyModel.cpp',
'Utilities/TextUtilities.cpp',
# Platform dependent files.
'Utilities/MouseHider_linux.cpp',
'Utilities/ScreenGrabber_linux.cpp',
'Utilities/QtWindowUtilities_linux.cpp',
'../Platform/Common/Default/AzQtComponents/Utilities/HandleDpiAwareness_Default.cpp',
'../Platform/Linux/AzQtComponents/Components/StyledDockWidget_Linux.cpp',
)

moc_headers = files(
'Components/ButtonDivider.h',
'Components/ButtonStripe.h',
'Components/DockBarButton.h',
'Components/DockBar.h',
'Components/DockMainWindow.h',
'Components/DockTabBar.h',
'Components/DockTabWidget.h',
'Components/ExtendedLabel.h',
'Components/FancyDockingDropZoneWidget.h',
'Components/FancyDocking.h',
'Components/FilteredSearchWidget.h',
'Components/HelpButton.h',
'Components/SearchLineEdit.h',
'Components/StyledBusyLabel.h',
'Components/StyledDetailsTableModel.h',
'Components/StyledDetailsTableView.h',
'Components/StyledDialog.h',
'Components/StyledDockWidget.h',
'Components/StyledLineEdit.h',
'Components/StyledSpinBox.h',
'Components/Style.h',
'Components/StyleManager.h',
'Components/StyleSheetCache.h',
'Components/StylesheetPreprocessor.h',
'Components/TagSelector.h',
'Components/Titlebar.h',
#'Components/TitleBarOverdrawHandler_win.h',
#'Components/TitleBarOverdrawScreenHandler_win.h',
'Components/ToolButtonComboBox.h',
'Components/ToolButtonLineEdit.h',
'Components/ToolButtonWithWidget.h',
'Components/VectorEdit.h',
'Components/Widgets/AssetFolderListView.h',
'Components/Widgets/AssetFolderThumbnailView.h',
'Components/Widgets/BreadCrumbs.h',
'Components/Widgets/BrowseEdit.h',
'Components/Widgets/Card.h',
'Components/Widgets/CardHeader.h',
'Components/Widgets/CardNotification.h',
'Components/Widgets/ColorLabel.h',
'Components/Widgets/ColorPicker/ColorComponentSliders.h',
'Components/Widgets/ColorPicker/ColorController.h',
'Components/Widgets/ColorPicker/ColorGrid.h',
'Components/Widgets/ColorPicker/ColorHexEdit.h',
'Components/Widgets/ColorPicker/ColorPreview.h',
'Components/Widgets/ColorPicker/ColorRGBAEdit.h',
'Components/Widgets/ColorPicker/ColorValidator.h',
'Components/Widgets/ColorPicker/ColorWarning.h',
'Components/Widgets/ColorPicker/GammaEdit.h',
'Components/Widgets/ColorPicker.h',
'Components/Widgets/ColorPicker/PaletteCardCollection.h',
'Components/Widgets/ColorPicker/PaletteCard.h',
'Components/Widgets/ColorPicker/PaletteView.h',
'Components/Widgets/ColorPicker/Swatch.h',
'Components/Widgets/ComboBox.h',
'Components/Widgets/ElidingLabel.h',
'Components/Widgets/Eyedropper.h',
'Components/Widgets/GradientSlider.h',
'Components/Widgets/Internal/OverlayWidgetLayer.h',
'Components/Widgets/OverlayWidget.h',
'Components/Widgets/SegmentBar.h',
'Components/Widgets/SegmentControl.h',
'Components/Widgets/SliderCombo.h',
'Components/Widgets/Slider.h',
'Components/Widgets/SpinBox.h',
'Components/Widgets/TableView.h',
'Components/Widgets/TabWidgetActionToolBar.h',
'Components/Widgets/TabWidget.h',
'Components/Widgets/TreeView.h',
'Components/Widgets/VectorInput.h',
'Components/WindowDecorationWrapper.h',
'Utilities/ScreenGrabber.h',
'Utilities/SelectionProxyModel.h',
)

azqtcomponents_files += [qt5_mod.compile_moc(
    headers: [moc_headers],
    )
]

azqtcomponents_files += qt5_mod.compile_ui(sources: ['Components/FilteredSearchWidget.ui',
    'Components/Widgets/Internal/OverlayWidgetLayer.ui'])

azqtcomponents_files += qt5_mod.compile_resources(sources: 'Components/resources.qrc')
