aztoolsframework_files += files(
#'AssetEditor/AssetEditorWidget.cpp',
#'AssetEditor/AssetEditorHeader.cpp',
'UI/Logging/LogLine.cpp',
#'UI/SearchWidget/SearchCriteriaWidget.cpp',
'API/EditorCameraBus.cpp',
#'Application/Ticker.cpp',
'Application/EditorEntityManager.cpp',
'Application/ToolsApplication.cpp',
'Asset/AssetDebugInfo.cpp',
'Asset/AssetProcessorMessages.cpp',
'Asset/AssetSystemComponent.cpp',
'Asset/AssetSeedManager.cpp',
'Asset/AssetBundler.cpp',
'Asset/AssetUtils.cpp',
'AssetCatalog/PlatformAddressedAssetCatalog.cpp',
'AssetCatalog/PlatformAddressedAssetCatalogManager.cpp',
'Thumbnails/ThumbnailerComponent.cpp',
'Thumbnails/ThumbnailerNullComponent.cpp',
#'Thumbnails/LoadingThumbnail.cpp',
#'Thumbnails/MissingThumbnail.cpp',
#'Thumbnails/SourceControlThumbnail.cpp',
#'Thumbnails/Thumbnail.cpp',
#'Thumbnails/ThumbnailContext.cpp',
#'Thumbnails/ThumbnailWidget.cpp',
'AssetBundle/AssetBundleComponent.cpp',
'AssetDatabase/AssetDatabaseConnection.cpp',
'Debug/TraceContextStack.cpp',
'Debug/TraceContextSingleStackHandler.cpp',
'Debug/TraceContextMultiStackHandler.cpp',
'Debug/TraceContextBufferedFormatter.cpp',
'Debug/TraceContextLogFormatter.cpp',
'Component/EditorComponentAPIComponent.cpp',
'Component/EditorLevelComponentAPIComponent.cpp',
'Entity/EditorEntityContextComponent.cpp',
'Entity/EditorEntityActionComponent.cpp',
'Entity/EditorEntityFixupComponent.cpp',
'Entity/EditorEntityHelpers.cpp',
'Entity/EditorEntityModel.cpp',
'Entity/EditorEntityModelComponent.cpp',
'Entity/EditorEntitySearchComponent.cpp',
'Entity/EditorEntitySortComponent.cpp',
'Entity/PrefabEditorEntityOwnershipService.cpp',
'Entity/SliceEditorEntityOwnershipService.cpp',
'Fingerprinting/TypeFingerprinter.cpp',
'Manipulators/AngularManipulator.cpp',
'Manipulators/BaseManipulator.cpp',
'Manipulators/EditorVertexSelection.cpp',
'Manipulators/LineHoverSelection.cpp',
'Manipulators/LineSegmentSelectionManipulator.cpp',
'Manipulators/LinearManipulator.cpp',
'Manipulators/MultiLinearManipulator.cpp',
'Manipulators/ManipulatorDebug.cpp',
'Manipulators/ManipulatorManager.cpp',
'Manipulators/ManipulatorView.cpp',
'Manipulators/ManipulatorSnapping.cpp',
'Manipulators/ManipulatorSpace.cpp',
'Manipulators/PlanarManipulator.cpp',
'Manipulators/RotationManipulators.cpp',
'Manipulators/ScaleManipulators.cpp',
'Manipulators/SelectionManipulator.cpp',
'Manipulators/SplineHoverSelection.cpp',
'Manipulators/SplineSelectionManipulator.cpp',
'Manipulators/SurfaceManipulator.cpp',
'Manipulators/TranslationManipulators.cpp',
'Picking/Manipulators/ManipulatorBoundManager.cpp',
'Picking/Manipulators/ManipulatorBounds.cpp',
'PropertyTreeEditor/PropertyTreeEditor.cpp',
'PropertyTreeEditor/PropertyTreeEditorComponent.cpp',
'Render/EditorIntersectorComponent.cpp',
'Slice/SliceDataFlagsCommand.cpp',
#'Slice/SliceUtilities.cpp',
'Slice/SliceCompilation.cpp',
'Slice/SliceTransaction.cpp',
'Slice/SliceDependencyBrowserComponent.cpp',
'Slice/SliceRelationshipNode.cpp',
'Slice/SliceRequestComponent.cpp',
'Slice/SliceMetadataEntityContextComponent.cpp',
'SourceControl/LocalFileSCComponent.cpp',
'SourceControl/PerforceComponent.cpp',
#'SourceControl/PerforceConnection.cpp',
#'SourceControl/QtSourceControlNotificationHandler.cpp',
'SQLite/SQLiteConnection.cpp',
'SQLite/SQLiteQuery.cpp',
'SQLite/SQLiteBoundColumnSet.cpp',
'ToolsComponents/ComponentAssetMimeDataContainer.cpp',
'ToolsComponents/ComponentMimeData.cpp',
'ToolsComponents/EditorAssetMimeDataContainer.cpp',
'ToolsComponents/EditorAssetReference.cpp',
'ToolsComponents/EditorComponentBase.cpp',
'ToolsComponents/EditorDisabledCompositionComponent.cpp',
'ToolsComponents/EditorOnlyEntityComponent.cpp',
'ToolsComponents/EditorEntityIdContainer.cpp',
'ToolsComponents/EditorEntityIconComponent.cpp',
'ToolsComponents/EditorLayerComponent.cpp',
'ToolsComponents/LayerResult.cpp',
'ToolsComponents/EditorLockComponent.cpp',
'ToolsComponents/EditorInspectorComponent.cpp',
'ToolsComponents/EditorPendingCompositionComponent.cpp',
'ToolsComponents/EditorSelectionAccentSystemComponent.cpp',
'ToolsComponents/EditorVisibilityComponent.cpp',
'ToolsComponents/GenericComponentWrapper.cpp',
'ToolsComponents/SelectionComponent.cpp',
'ToolsComponents/TransformComponent.cpp',
'ToolsComponents/TransformComponentSerializer.cpp',
'ToolsComponents/ScriptEditorComponent.cpp',
'ToolsComponents/ToolsAssetCatalogComponent.cpp',
'ToolsComponents/AzToolsFrameworkConfigurationSystemComponent.cpp',
'ToolsComponents/EditorNonUniformScaleComponent.cpp',
'ToolsComponents/EditorNonUniformScaleComponentMode.cpp',
#'UI/Docking/DockWidgetUtils.cpp',
#'UI/Layer/AddToLayerMenu.cpp',
#'UI/Logging/LogEntry.cpp',
#'UI/Logging/LogControl.cpp',
#'UI/Logging/NewLogTabDialog.cpp',
#'UI/Logging/LogPanel_Panel.cpp',
#'UI/Logging/TracePrintFLogPanel.cpp',
#'UI/Logging/GenericLogPanel.cpp',
#'UI/Logging/LogTableModel.cpp',
#'UI/Logging/LogTableItemDelegate.cpp',
#'UI/Logging/StyledLogPanel.cpp',
#'UI/Logging/StyledTracePrintFLogPanel.cpp',
#'UI/ComponentPalette/ComponentPaletteWidget.cpp',
#'UI/ComponentPalette/ComponentPaletteModel.cpp',
#'UI/ComponentPalette/ComponentPaletteModelFilter.cpp',
#'UI/ComponentPalette/ComponentPaletteUtil.cpp',
#'UI/Layer/NameConflictWarning.cpp',
#'UI/PropertyEditor/ComponentEditor.cpp',
#'UI/PropertyEditor/ComponentEditorHeader.cpp',
#'UI/PropertyEditor/DHQComboBox.cpp',
#'UI/PropertyEditor/DHQSlider.cpp',
#'UI/PropertyEditor/EntityIdQLabel.cpp',
#'UI/PropertyEditor/EntityIdQLineEdit.cpp',
#'UI/PropertyEditor/EntityPropertyEditor.cpp',
#'UI/PropertyEditor/GenericComboBoxCtrl.cpp',
#'UI/PropertyEditor/InstanceDataHierarchy.cpp',
#'UI/PropertyEditor/PropertyAssetCtrl.cpp',
#'UI/PropertyEditor/PropertyAudioCtrl.cpp',
#'UI/PropertyEditor/PropertyBoolComboBoxCtrl.cpp',
#'UI/PropertyEditor/PropertyBoolRadioButtonsCtrl.cpp',
#'UI/PropertyEditor/PropertyButtonCtrl.cpp',
#'UI/PropertyEditor/PropertyCheckBoxCtrl.cpp',
#'UI/PropertyEditor/PropertyColorCtrl.cpp',
#'UI/PropertyEditor/PropertyDoubleSliderCtrl.cpp',
#'UI/PropertyEditor/PropertyDoubleSpinCtrl.cpp',
#'UI/PropertyEditor/PropertyEditorApi.cpp',
#'UI/PropertyEditor/PropertyEntityIdCtrl.cpp',
#'UI/PropertyEditor/PropertyEnumComboBoxCtrl.cpp',
#'UI/PropertyEditor/PropertyIntSliderCtrl.cpp',
#'UI/PropertyEditor/PropertyIntSpinCtrl.cpp',
#'UI/PropertyEditor/PropertyCRCCtrl.cpp',
#'UI/PropertyEditor/PropertyManagerComponent.cpp',
#'UI/PropertyEditor/PropertyRowWidget.cpp',
#'UI/PropertyEditor/PropertyStringComboBoxCtrl.cpp',
#'UI/PropertyEditor/PropertyStringLineEditCtrl.cpp',
#'UI/PropertyEditor/PropertyVectorCtrl.cpp',
#'UI/PropertyEditor/ReflectedPropertyEditor.cpp',
#'UI/PropertyEditor/GrowTextEdit.cpp',
#'UI/PropertyEditor/MultiLineTextEditHandler.cpp',
#'UI/PropertyEditor/ThumbnailPropertyCtrl.cpp',
#'UI/Slice/SlicePushWidget.cpp',
#'UI/Slice/SliceOverridesNotificationWindow.cpp',
#'UI/Slice/SliceOverridesNotificationWindowManager.cpp',
#'UI/Slice/SliceRelationshipWidget.cpp',
#'UI/UICore/AspectRatioAwarePixmapWidget.cpp',
#'UI/UICore/AZAutoSizingScrollArea.cpp',
#'UI/UICore/ColorPickerDelegate.cpp',
#'UI/UICore/ClickableLabel.cpp',
#'UI/UICore/IconButton.cpp',
#'UI/UICore/PlainTextEdit.cpp',
#'UI/UICore/ProgressShield.cpp',
#'UI/UICore/QTreeViewStateSaver.cpp',
#'UI/UICore/QWidgetSavedState.cpp',
#'UI/UICore/TargetSelectorButton.cpp',
'Undo/UndoSystem.cpp',
'Commands/ComponentModeCommand.cpp',
'Commands/EntityManipulatorCommand.cpp',
'Commands/EntityStateCommand.cpp',
'Commands/SelectionCommand.cpp',
'Commands/EntityTransformCommand.cpp',
'Commands/PreemptiveUndoCache.cpp',
'Commands/BaseSliceCommand.cpp',
'Commands/SliceDetachEntityCommand.cpp',
'Commands/DetachSubSliceInstanceCommand.cpp',
'Commands/PushToSliceCommand.cpp',
'Commands/CreateSliceCommand.cpp',
'Viewport/EditorContextMenu.cpp',
'Viewport/VertexContainerDisplay.cpp',
'Viewport/ViewportTypes.cpp',
'ViewportUi/Button.cpp',
'ViewportUi/ButtonGroup.cpp',
'ViewportUi/TextField.cpp',
'ViewportUi/ViewportUiDisplay.cpp',
'ViewportUi/ViewportUiManager.cpp',
'ViewportUi/ViewportUiTextField.cpp',
'ViewportUi/ViewportUiCluster.cpp',
'ViewportUi/ViewportUiSwitcher.cpp',
'ViewportUi/ViewportUiWidgetCallbacks.cpp',
'ViewportUi/ViewportUiDisplayLayout.cpp',
'ComponentMode/ComponentModeCollection.cpp',
'ComponentMode/ComponentModeDelegate.cpp',
'ComponentMode/ComponentModeViewportUi.cpp',
'ComponentMode/EditorBaseComponentMode.cpp',
'ComponentModes/BoxComponentMode.cpp',
'ComponentModes/BoxViewportEdit.cpp',
'ViewportSelection/EditorBoxSelect.cpp',
'ViewportSelection/EditorDefaultSelection.cpp',
'ViewportSelection/EditorHelpers.cpp',
'ViewportSelection/EditorInteractionSystemComponent.cpp',
'ViewportSelection/EditorPickEntitySelection.cpp',
'ViewportSelection/EditorSelectionUtil.cpp',
'ViewportSelection/EditorTransformComponentSelectionRequestBus.cpp',
'ViewportSelection/EditorVisibleEntityDataCache.cpp',
#'AssetBrowser/AssetBrowserComponent.cpp',
#'AssetBrowser/AssetBrowserFilterModel.cpp',
#'AssetBrowser/AssetBrowserTableModel.cpp',
#'AssetBrowser/AssetBrowserModel.cpp',
'AssetBrowser/AssetEntryChangeset.cpp',
'AssetBrowser/AssetSelectionModel.cpp',
#'AssetBrowser/Views/AssetBrowserTreeView.cpp',
#'AssetBrowser/Views/AssetBrowserTableView.cpp',
#'AssetBrowser/Views/EntryDelegate.cpp',
#'AssetBrowser/Views/AssetBrowserFolderWidget.cpp',
#'AssetBrowser/Entries/AssetBrowserEntry.cpp',
'AssetBrowser/Entries/AssetBrowserEntryCache.cpp',
'AssetBrowser/Entries/FolderAssetBrowserEntry.cpp',
'AssetBrowser/Entries/ProductAssetBrowserEntry.cpp',
'AssetBrowser/Entries/RootAssetBrowserEntry.cpp',
'AssetBrowser/Entries/SourceAssetBrowserEntry.cpp',
#'AssetBrowser/Search/Filter.cpp',
#'AssetBrowser/Search/FilterByWidget.cpp',
#'AssetBrowser/Search/SearchAssetTypeSelectorWidget.cpp',
#'AssetBrowser/Search/SearchParametersWidget.cpp',
#'AssetBrowser/Search/SearchWidget.cpp',
#'AssetBrowser/Thumbnails/FolderThumbnail.cpp',
#'AssetBrowser/Thumbnails/ProductThumbnail.cpp',
#'AssetBrowser/Thumbnails/SourceThumbnail.cpp',
#'AssetBrowser/AssetPicker/AssetPickerDialog.cpp',
#'AssetBrowser/Previewer/EmptyPreviewer.cpp',
#'AssetBrowser/Previewer/Previewer.cpp',
#'AssetBrowser/Previewer/PreviewerFrame.cpp',
'Archive/ArchiveComponent.cpp',
'Archive/NullArchiveComponent.cpp',
#'UI/PropertyEditor/Model/AssetCompleterModel.cpp',
#'UI/PropertyEditor/View/AssetCompleterListView.cpp',
'Prefab/EditorPrefabComponent.cpp',
'Prefab/PrefabDomUtils.cpp',
'Prefab/PrefabLoader.cpp',
'Prefab/PrefabSystemComponent.cpp',
'Prefab/Instance/Instance.cpp',
'Prefab/Instance/InstanceSerializer.cpp',
'Prefab/Instance/InstanceEntityScrubber.cpp',
'Prefab/Instance/InstanceEntityIdMapper.cpp',
'Prefab/Instance/InstanceEntityMapper.cpp',
'Prefab/Instance/InstanceToTemplatePropagator.cpp',
'Prefab/Instance/InstanceUpdateExecutor.cpp',
'Prefab/Instance/TemplateInstanceMapper.cpp',
'Prefab/Link/Link.cpp',
'Prefab/PrefabPublicHandler.cpp',
'Prefab/PrefabUndo.cpp',
'Prefab/PrefabUndoCache.cpp',
'Prefab/PrefabUndoHelpers.cpp',
'Prefab/Spawnable/ComponentRequirementsValidator.cpp',
'Prefab/Spawnable/EditorInfoRemover.cpp',
'Prefab/Spawnable/EditorOnlyEntityHandler/EditorOnlyEntityHandler.cpp',
'Prefab/Spawnable/EditorOnlyEntityHandler/UiEditorOnlyEntityHandler.cpp',
'Prefab/Spawnable/EditorOnlyEntityHandler/WorldEditorOnlyEntityHandler.cpp',
'Prefab/Spawnable/PrefabCatchmentProcessor.cpp',
'Prefab/Spawnable/PrefabConversionPipeline.cpp',
'Prefab/Spawnable/ProcesedObjectStore.cpp',
'Prefab/Spawnable/PrefabProcessorContext.cpp',
'Prefab/Spawnable/SpawnableMetaDataBuilder.cpp',
'Prefab/Spawnable/SpawnableUtils.cpp',
'Prefab/Template/Template.cpp',
#'UI/Outliner/EntityOutlinerDisplayOptionsMenu.cpp',
#'UI/Outliner/EntityOutlinerTreeView.cpp',
#'UI/Outliner/EntityOutlinerWidget.cpp',
#'UI/Outliner/EntityOutlinerListModel.cpp',
#'UI/Outliner/EntityOutlinerSearchWidget.cpp',
#'UI/Outliner/EntityOutlinerSortFilterProxyModel.cpp',
#'UI/EditorEntityUi/EditorEntityUiHandlerBase.cpp',
#'UI/EditorEntityUi/EditorEntityUiSystemComponent.cpp',
#'UI/Layer/LayerUiHandler.cpp',
#'UI/Prefab/LevelRootUiHandler.cpp',
#'UI/Prefab/PrefabEditManager.cpp',
#'UI/Prefab/PrefabIntegrationManager.cpp',
#'UI/Prefab/PrefabUiHandler.cpp',
#'PythonTerminal/ScriptHelpDialog.cpp',
#'PythonTerminal/ScriptTermDialog.cpp',
#'Input/QtEventToAzInputManager.cpp',
#'AzToolsFrameworkModule.cpp',
'Application/ToolsApplication.cpp',
#'UI/PropertyEditor/PropertyEntityIdCtrl.cpp',
#'UI/PropertyEditor/PropertyManagerComponent.cpp',
'ViewportSelection/EditorDefaultSelection.cpp',
'ViewportSelection/EditorInteractionSystemComponent.cpp',
#'ViewportSelection/EditorTransformComponentSelection.cpp',
)

azgameframework_files += files(
'UI/LegacyFramework/MainWindowSavedState.cpp',
'UI/LegacyFramework/UIFramework.cpp',
'UI/LegacyFramework/UIFrameworkPreferences.cpp',
'UI/LegacyFramework/Core/EditorFrameworkAPI.cpp',
'UI/LegacyFramework/Core/EditorFrameworkApplication.cpp',
'UI/LegacyFramework/Core/IPCComponent.cpp',
'UI/LegacyFramework/CustomMenus/CustomMenusComponent.cpp',
'UI/UICore/OverwritePromptDialog.cpp',
'UI/UICore/SaveChangesDialog.cpp',
'ToolsFileUtils/ToolsFileUtils_generic.cpp',
)
