gridmate_files += files(
'GridMate.cpp',
'Carrier/Carrier.cpp',
'Carrier/DefaultHandshake.cpp',
'Carrier/DefaultSimulator.cpp',
'Carrier/DefaultTrafficControl.cpp',
'Carrier/SocketDriver.cpp',
'Carrier/StreamSocketDriver.cpp',
'Drillers/CarrierDriller.cpp',
'Drillers/ReplicaDriller.cpp',
'Drillers/SessionDriller.cpp',
'Replica/DataSet.cpp',
'Replica/MigrationSequence.cpp',
'Replica/RemoteProcedureCall.cpp',
'Replica/Replica.cpp',
'Replica/ReplicaChunk.cpp',
'Replica/ReplicaChunkDescriptor.cpp',
'Replica/ReplicaMgr.cpp',
'Replica/ReplicaStatus.cpp',
'Replica/ReplicaTarget.cpp',
'Replica/SystemReplicas.cpp',
'Replica/Tasks/ReplicaMarshalTasks.cpp',
'Replica/Tasks/ReplicaUpdateTasks.cpp',
'Replica/Tasks/ReplicaProcessPolicy.cpp',
'Replica/Interest/BitmaskInterestHandler.cpp',
'Replica/Interest/InterestManager.cpp',
'Serialize/Buffer.cpp',
'Serialize/CompressionMarshal.cpp',
'Session/LANSession.cpp',
'Session/Session.cpp',
)
