azcore_files += files(
'../Common/UnixLike/AzCore/std/parallel/internal/thread_UnixLike.cpp',
'AzCore/std/parallel/internal/thread_Linux.cpp',
'../Common/UnixLike/AzCore/Debug/StackTracer_UnixLike.cpp',
'../Common/UnixLike/AzCore/Debug/Trace_UnixLike.cpp',
'AzCore/Debug/Trace_Linux.cpp',
'../Common/Default/AzCore/IO/Streamer/StreamerConfiguration_Default.cpp',
'../Common/Default/AzCore/IO/Streamer/StreamerContext_Default.cpp',
'../Common/UnixLike/AzCore/IO/SystemFile_UnixLike.cpp',
'../Common/UnixLike/AzCore/IO/Internal/SystemFileUtils_UnixLike.cpp',
'../Common/UnixLikeDefault/AzCore/IO/SystemFile_UnixLikeDefault.cpp',
'AzCore/IO/SystemFile_Linux.cpp',
'AzCore/Memory/HeapSchema_Linux.cpp',
'AzCore/Module/Internal/ModuleManagerSearchPathTool_Linux.cpp',
'../Common/UnixLike/AzCore/Math/Random_UnixLike.cpp',
'../Common/UnixLike/AzCore/Module/DynamicModuleHandle_UnixLike.cpp',
'AzCore/Module/DynamicModuleHandle_Linux.cpp',
'../Common/Unimplemented/AzCore/NativeUI/NativeUISystemComponent_Unimplemented.cpp',
'../Common/UnixLike/AzCore/Platform_UnixLike.cpp',
'../Common/UnixLike/AzCore/Socket/AzSocket_UnixLike.cpp',
'../Common/UnixLike/AzCore/std/time_UnixLike.cpp',
'AzCore/Utils/Utils_Linux.cpp',
'../Common/UnixLike/AzCore/Utils/Utils_UnixLike.cpp',
)
